2012-12-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php,
	  include/functions_reporting.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_live_view.php: Aesthetic fixes.

2012-12-07  Junichi Satoh  <junichi@rworks.jp>

	* index.php: Fixed undefined function error in case of login
	failures without enterprise.

2012-12-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php, include/functions_html.php,
	include/functions_netflow.php: cleaned source code style.
	
	* include/db/mysql.php: fixed into the function
	"mysql_db_process_sql" a big bug that runs fine the select querys in
	a metaconsole enviorement with several DBs but the insert querys
	make in the previous connection.

2012-12-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php,
	operation/integria_incidents/incident.php,
	godmode/massive/massive_delete_modules.php,
	godmode/modules/manage_network_templates_form.php,
	godmode/modules/manage_network_components_form_plugin.php,
	godmode/agentes/fields_manager.php,
	godmode/agentes/module_manager.php, godmode/users/profile_list.php,
	godmode/events/event_filter.php: cleaned source code style.
	
	* operation/tree.php: fixed the url to childrem consoles from the
	metaconsole tree.

2012-12-05  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  include/functions_config.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_live_view.php,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql,
	  godmode/setup/setup_netflow.php,
	  godmode/netflow/nf_edit_form.php: Performance improvements. Use csv
	  output to avoid using regular expressions. Removed byte, flow and
	  packet unit and added kilobyte, megabyte, kilobytes per second and
	  megabytes per second.

2012-12-05  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php
	godmode/agentes/configurar_agente.php
	godmode/agentes/module_manager_editor.php
	godmode/menu.php