@@ -1,3 +1,13 @@
+2012-12-07  Sergio Martin <sergio.martin@artica.es>
+
+	* include/javascript/pandora_modules.js
+	godmode/agentes/module_manager_editor_common.php
+	godmode/agentes/configurar_agente.php
+	godmode/modules/manage_network_components_form.php
+	godmode/modules/manage_network_components_form_common.php
+	godmode/modules/manage_network_components.php: Added id_category
+	to network components and module editors
+
 2012-12-07  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/functions_graph.php,
